--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build-server": "tsc -p tsconfig.server.json",
+    "start-server": "node ./src/socket-server/server.js"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "15.1.3",
+    "@angular/cdk": "^15.1.4",
     "@angular/common": "15.1.3",
     "@angular/compiler": "15.1.3",
     "@angular/core": "15.1.3",
@@ -22,8 +25,12 @@
     "@angular/router": "15.1.3",
     "@popperjs/core": "2.9.2",
     "bootstrap": "5.0.1",
+    "express": "^4.18.2",
     "rxjs": "6.6.7",
+    "socket.io": "^4.6.0",
+    "socket.io-client": "^4.6.0",
     "tslib": "^2.0.0",
+    "unique-names-generator": "^4.7.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -52,5 +59,10 @@
     "setupFilesAfterEnv": [
       "./src/setupJest.ts"
     ]
-  }
+  },
+  "description": "I created this project to freshen up my skills in angular and typescript. The game and mechanics are based on this [datagenetics article](http://www.datagenetics.com/blog/december32011/).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
